@@ -63,6 +63,7 @@ Kunihiro Ishiguro <kunihiro@zebra.org>
 Leendert Meyer <leen.meyer@home.nl>
 M. Meiarashi <mes@st.rim.or.jp>
 Mark Lundeberg <aa026@pgfn.bc.ca>
+Matt Perry <matt@primefactor.com>
 Matt Yourst <yourst@mit.edu>
 Matthias Granberry <matthias@slurpee.org>
 Matthias Kretschmer <m.kretschmer@bsdger.org>
